# semver

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .vimrc.local  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.gitlab-ci/: gitlab-build.sh
cmake/: RepoInformation.cmake
example/: range-check.cpp  range-normalize.cpp  range-parse.cpp  semver-compare.cpp
include/semver/: glibc-bugfix.hpp  range.hpp  semver.hpp
include/semver/detail/: range_lexer.hpp  range_node.hpp  range_parser.hpp  semver_parser.hpp
src/: range.cpp  semver.cpp
src/detail/: range_lexer.hpp  range_parser.hpp
tests/: test_comparison.cpp  test_conan_gen.sh  test_construction.cpp  test_construction_loose.cpp  test_fetchcontent.sh  test_range_bounds.cpp  test_range_comparison.cpp  test_range_construction.cpp  test_range_intersection.cpp  test_range_lexer.cpp  test_range_node.cpp  test_range_query.cpp  test_range_string.cpp  test_semver_comparison.cpp  test_semver_construction.cpp  test_semver_construction_loose.cpp  test_semver_parser.cpp  test_string.cpp  test_subdirectory.sh
tests/conan-gen/: CMakeLists.txt  conanfile.txt
tests/fetchcontent/: CMakeLists.txt  main.cpp
tests/subdirectory/: CMakeLists.txt
tests/unit/: test_range_comparison.cpp  test_range_query.cpp  test_semver_parser.cpp  test_semver_string.cpp
