cmake_minimum_required(VERSION 3.21)
project(semver-test LANGUAGES CXX VERSION 0.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE semver::semver)

set(DISABLE_TESTING  TRUE CACHE BOOL "" FORCE)
set(DISABLE_EXAMPLES TRUE CACHE BOOL "" FORCE)
add_subdirectory(${LIBRARY_REPOSITORY} ${CMAKE_CURRENT_BINARY_DIR}/semver)

